# mmdetection_ros

./: .gitignore  README.md
mmdetection_bringup/: CMakeLists.txt  package.xml
mmdetection_bringup/launch/: mmdetection.launch.py  visualization.launch.py
mmdetection_msgs/: CMakeLists.txt  package.xml
mmdetection_msgs/msg/: Box.msg  Detection.msg  Detections.msg  Mask.msg
mmdetection_ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mmdetection_ros/mmdetection_ros/: mmdetection_node.py  visualization_node.py
